<resources>
    <string name="app_name" translatable="false">Moveis!</string>


    <!-- Place Holders -->
    <string name="image_place_holder">There is nothing to do</string>
    <string name="rating_place_holder">(%.1f/10)</string>
    <string name="popularity_place_holder">%.1f/1000</string>
    <string name="times_place_holder">%s times</string>
    <string name="dollar_place_holder">%s $</string>
    <string name="tagline_place_holder">\"%1$s\"</string>
    <string name="thumbnail_place_holder">%s%s/hqdefault.jpg</string>
    <string name="no_company_found">No company info found.</string>
    <string name="no_country_found">No country info found.</string>
    <string name="no_language_found">No language info found.</string>
    <string name="no_budget_found">No budget info found.</string>
    <string name="no_revenue_found">No revenue info found.</string>
    <string name="no_runtime_found">No runtime info found.</string>
    <string name="no_homepage_found">No homepage info found.</string>
    <string name="more">More</string>
    <string name="less">Less</string>


    <!-- About Texts -->
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="about_description">This app is a task that Udacity Google Android Developer Track Nanodegree Program applies to all its fellows. You are able to switch between Popular and Top Rated movies, read reviews and watch trailers. You can also add movies you like in your favorites list to access them anytime.</string>
    <string name="version" translatable="false">Version: %s</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="email" translatable="false">nuhkocaa@gmail.com</string>
    <string name="udacity_website" translatable="false">https://www.udacity.com/</string>
    <string name="udacity_facebook" translatable="false">Udacity</string>
    <string name="udacity_twitter" translatable="false">udacity</string>
    <string name="udacity_youtube" translatable="false">UCul78U9NKBYHyqnhQfqUXmg</string>
    <string name="udacity_play_store" translatable="false">com.udacity.android</string>
    <string name="udacity_instagram" translatable="false">udacity</string>
    <string name="github" translatable="false">nuhkoca</string>
    <string name="scholarship_element" translatable="false">Scholarships at Udacity</string>
    <string name="scholarship_link" translatable="false">https://www.udacity.com/scholarships</string>
    <string name="chooser_title" translatable="false">Open with...</string>


    <!-- Tags -->
    <string name="popular_tag" translatable="false">popular</string>
    <string name="top_rated_tag" translatable="false">top_rated</string>
    <string name="upcoming_tag" translatable="false">upcoming</string>
    <string name="now_playing_tag" translatable="false">now_playing</string>
    <string name="total_review_tag" translatable="false">%1$d review(s)</string>
    <string name="total_trailer_tag" translatable="false">%1$d trailer(s)</string>


    <!-- Headers -->
    <string name="popular_header">Popular</string>
    <string name="top_rated_header">Top Rated</string>
    <string name="upcoming_header">Upcoming</string>
    <string name="now_playing_header">Now Playing</string>
    <string name="other_details_part_header">Overview</string>
    <string name="review_part_header">Reviews</string>
    <string name="trailer_part_header">Trailers</string>
    <string name="favorite_warning_header">Swipe the card left or right to delete.</string>


    <!-- Messages -->
    <string name="popular_movies_successfully_loaded">Popular movies successfully loaded</string>
    <string name="top_rated_movies_successfully_loaded">Top Rated movies successfully loaded</string>
    <string name="twice_press_to_exit">Press once again to exit.</string>
    <string name="api_key_null">API Key is null</string>
    <string name="movie_tag_key_null">Movie tag is null</string>
    <string name="movie_id_key_null">Movie ID shouldn\'t be lower than 0</string>
    <string name="no_internet_connection">You are not connected to an active network connection</string>
    <string name="mail_address">nuhkocaa@gmail.com</string>
    <string name="no_data_error">There was an error occurred. Please try again later.</string>
    <string name="no_review_found">No review found.</string>
    <string name="no_detail_found">No detail found.</string>
    <string name="no_trailer_found">No trailer found.</string>
    <string name="no_data_in_database">No movie found. Please add some movies first!</string>
    <string name="movie_already_exists">You already added this movie to your favorites.</string>
    <string name="movie_added_to_database">You added %s to your favorites successfully.</string>
    <string name="favorites_all_deleted">Your favorites list is now empty!</string>
    <string name="no_data_already">There is already no favorite movie.</string>
    <string name="favorite_is_opening">No connection detected. Favorite page is opening…</string>


    <!-- Alert Dialog Texts -->
    <string name="dialog_title">Are you sure you want to remove %s from your favorites list?</string>
    <string name="dialog_title_all">Are you sure you want to remove all movies from your favorites list?</string>
    <string name="dialog_title_youtube">Where do you want to watch this video?</string>
    <string name="dialog_message">If you remove, you will have to re-add the movie again.</string>
    <string name="dialog_message_all">You will lose all your favorite movies.</string>
    <string name="dialog_message_youtube">Please select a platform where you want to watch.</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_positive_button_youtube">This app</string>
    <string name="dialog_negative_button">No</string>
    <string name="dialog_negative_button_youtube">Youtube app</string>
    <string name="dialog_action_message">%s has been deleted from your favorites list!</string>
    <string name="dialog_action_message_all">All movies has been deleted from your favorites list!</string>


    <!-- ShareIntent Texts -->
    <string name="send_to">Send with…</string>
    <string name="share_to">Share %s with others</string>
    <string name="share_to_full_review">Share %s\'s full review with others</string>
    <string name="share_extra_text">Hey! I am now watching %s on Moveis! You can now download the app and watch any movie you want, too! Here is the link: https://github.com/nuhkoca/udacity-movie-app</string>
    <string name="share_extra_text_full_review">To see %s\'s full review about %s, now download Moveis! for free!</string>


    <!-- Menu Texts -->
    <string name="report">Report</string>
    <string name="my_favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="about">About</string>
    <string name="full_review">Full Review</string>
    <string name="delete_all">Delete all</string>
    <string name="license">License</string>


    <!-- Movie Details Labels -->
    <string name="release_date">Release Date</string>
    <string name="vote_count">Vote Count</string>
    <string name="vote_average">Vote Average</string>
    <string name="popularity">Popularity</string>
    <string name="budget">Budget</string>
    <string name="homepage">Homepage</string>
    <string name="revenue">Revenue</string>
    <string name="runtime">Runtime</string>
    <string name="prod_companies">Production Companies</string>
    <string name="prod_countries">Production Countries</string>
    <string name="spoken_languages">Spoken Languages</string>


    <!-- Review Details Labels -->
    <string name="click_to_see_full_review">Click to see full review</string>


    <!-- Genres Labels -->
    <string-array name="genresLabel">
        <item name="28">Action</item>
        <item name="12">Adventure</item>
        <item name="16">Animation</item>
        <item name="35">Comedy</item>
        <item name="80">Crime</item>
        <item name="99">Documentary</item>
        <item name="18">Drama</item>
        <item name="10751">Family</item>
        <item name="14">Fantasy</item>
        <item name="36">History</item>
        <item name="27">Horror</item>
        <item name="10402">Music</item>
        <item name="9648">Mystery</item>
        <item name="10749">Romance</item>
        <item name="878">Science Fiction</item>
        <item name="10770">TV Movie</item>
        <item name="53">Thriller</item>
        <item name="10752">War</item>
        <item name="37">Western</item>
    </string-array>


    <!-- Libraries Included -->
    <string-array name="libraries_included">
        <item name="timber">timber</item>
        <item name="glide">glide</item>
        <item name="okhttp">okhttp</item>
        <item name="glidepalette">glidepalette</item>
        <item name="bottomsheet">bottomsheet</item>
        <item name="retrofit">retrofit</item>
        <item name="leakcanary">leakcanary</item>
        <item name="rxjava">rxjava</item>
        <item name="android-about-page">android-about-page</item>
        <item name="taggroup">taggroup</item>
        <item name="material-dialogs">material-dialogs</item>
        <item name="blurry">Blurry</item>
    </string-array>


    <!-- Libraries Excluded -->
    <string-array name="libraries_excluded">
        <item name="fastadapter">fastadapter</item>
        <item name="Android-Iconics">Android-Iconics</item>
    </string-array>

</resources>